tests/samples/invalid/ambiguous_bit_integer_too_big.pn
fn main()
{
	var x = 0x4625 as u8;
}
